--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.0",
+    "gulp-cheerio": "^0.6.2",
     "gulp-consolidate": "^0.1.2",
     "gulp-filter": "^3.0.1",
     "gulp-front-matter": "^1.3.0",
@@ -28,9 +29,13 @@
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svgmin": "^1.2.0",
+    "gulp-svgstore": "^5.0.5",
     "gulp-util": "^3.0.7",
     "lodash": "^4.3.0",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5"
+  },
+  "dependencies": {
+    "svgxuse": "^1.1.10"
   }
 }
